# parallel-programming-labs

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
Lab 1/: main.cpp
Lab 1/src/: main.cpp
Lab 2/: CMakeLists.txt  main.cpp
Lab 2/src/: main.cpp
Lab 2/src/utils/: CMakeLists.txt
Lab 2/src/utils/include/: auxUtils.hpp  inUtils.hpp  mathUtils.hpp  outUtils.hpp  randUtils.hpp  typeDefs.hpp
Lab 2/src/utils/source/: auxUtils.cpp  mathUtils.cpp  outUtils.cpp  randUtils.cpp
Lab 3/: CMakeLists.txt
Lab 3/src/: main.cpp
Lab 3/src/utils/include/: auxUtils.hpp  inUtils.hpp  mathUtils.hpp  randUtils.hpp  typeDefs.hpp
Lab 3/src/utils/source/: inUtils.cpp  mathUtils.cpp  outUtils.cpp  randUtils.cpp
Lab 4/: CMakeLists.txt  Lab 4.sln  Lab 4.vcxproj  Lab 4.vcxproj.filters  README.md
Lab 4/src/: main.cpp
Lab 5/: CMakeLists.txt  README.md
Lab 5/src/: main.cpp  vMMultiplySubprog.cpp
Lab 5/src/utils/include/: mathUtils.hpp
Lab 5/src/utils/source/: auxUtils.cpp  inUtils.cpp  mathUtils.cpp  outUtils.cpp
Lab 6/: CMakeLists.txt
Lab 6/src/: main.cpp  workerCrit.cpp  workerRed.cpp
Lab 6/src/utils/: CMakeLists.txt
Lab 6/src/utils/include/: auxUtils.hpp  randUtils.hpp
Lab 6/src/utils/source/: mathUtils.cpp
Lab 7/: CMakeLists.txt
Lab 7/src/: main.cpp  worker.cpp
Lab 7/src/utils/include/: mathUtils.hpp
Lab 7/src/utils/source/: auxUtils.cpp  randUtils.cpp
Lab 8/: CMakeLists.txt
Lab 8/src/: main.cpp
Lab 8/src/utils/: CMakeLists.txt
Lab 8/src/utils/include/: auxUtils.hpp  mathUtils.hpp  outUtils.hpp  randUtils.hpp  typeDefs.hpp
Lab 8/src/utils/source/: auxUtils.cpp  outUtils.cpp
